--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
@@ -14,7 +14,8 @@
    
    
    <color name="white_translucent">#D8FFFFFF</color>
-   <color name="white_more_translucent">#66FFFFFF</color>
+ <color name="white_light_dark">#EEEEEE</color>
+ <color name="white_more_translucent">#66FFFFFF</color>
  <color name="white_light_grey">#FAFAFA</color>
  <color name="white_light_more_grey">#F3F3F3</color>
    
