--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
@@ -60,9 +60,11 @@
     <color name="favorite_div">#97989C</color>
     
     <color name="yellow_jugnoo">#FAA31C</color>
-    
-    
-        
+    <color name="musturd_jugnoo">#FFAC00</color>
+
+
+
+
     <color name="yellow_status">#F89414</color>    
     <color name="green_status">#2EA058</color>    
     <color name="red_status">#F53C37</color>
@@ -83,6 +85,7 @@
     <color name="grey_light_alpha">#99DDDDDD</color>
     <color name="grey_dark_less">#A3A3A3</color>
     <color name="grey_dark">#838383</color>
+    <color name="grey_dark_button">#54585D</color>
     <color name="grey_dark_more">#5D5D5D</color>
     <color name="grey_black">#232323</color>
     <color name="grey_black_light">#3E3E3E</color>
