feature_referral_money_earned: added null referral_money check

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_leaderboard.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_leaderboard.xml
@@ -139,7 +139,7 @@
             android:src="@color/black_translucent"
             />
         <TextView
-            android:id="@+id/textViewMonthly"
+            android:id="@+id/textViewMonthlyValue"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
