--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_history.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_history.xml
@@ -13,26 +13,31 @@
         android:orientation="vertical"
         android:splitMotionEvents="false">
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/topRl"
             android:layout_width="match_parent"
             android:layout_height="96px"
             android:background="@color/bg_grey_opaque"
-            android:splitMotionEvents="false">
+            android:splitMotionEvents="false"
+            android:orientation="horizontal"
+            >
 
-            <Button
-                android:id="@+id/backBtn"
-                android:layout_width="80px"
-                android:layout_height="80px"
-                android:layout_centerVertical="true"
-                android:background="@drawable/back_btn_selector"
-                android:tag="mwar"/>
 
             <RelativeLayout
                 android:id="@+id/topRlDaily"
                 android:layout_width="240px"
                 android:layout_height="match_parent"
-                android:splitMotionEvents="false">
+                android:splitMotionEvents="false"
+                android:layout_weight="1"
+                >
+
+                <Button
+                    android:id="@+id/backBtn"
+                    android:layout_width="80px"
+                    android:layout_height="80px"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/back_btn_selector"
+                    android:tag="mwar"/>
 
                 <TextView
                     android:id="@+id/textViewDailyText"
@@ -57,22 +62,21 @@
 
             </RelativeLayout>
 
-            <ImageView
-                android:id="@+id/imgView1"
-                android:layout_width="2px"
-                android:layout_height="120px"
-                android:background="@color/white"
-                android:layout_toRightOf="@+id/topRlDaily"
-                />
+
 
             <RelativeLayout
                 android:id="@+id/topRlMonthly"
                 android:layout_width="230px"
                 android:layout_height="match_parent"
-                android:layout_toRightOf="@+id/imgView1"
-                android:splitMotionEvents="false">
+                android:splitMotionEvents="false"
+                android:layout_weight="1">
 
-
+                <ImageView
+                    android:id="@+id/imgView1"
+                    android:layout_width="2px"
+                    android:layout_height="match_parent"
+                    android:background="@color/white"
+                    />
                 <TextView
                     android:id="@+id/textViewMonthlyText"
                     android:layout_width="wrap_content"
@@ -85,7 +89,7 @@
                     android:textStyle="bold"/>
 
                 <TextView
-                    android:id="@+id/textViewMonthly"
+                    android:id="@+id/textViewMonthlyValue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/textViewMonthlyText"
@@ -97,20 +101,21 @@
             </RelativeLayout>
 
 
-            <ImageView
-                android:id="@+id/imgView2"
-                android:layout_width="2px"
-                android:layout_height="120px"
-                android:background="@color/white"
-                android:layout_toRightOf="@+id/topRlMonthly"                />
-
             <RelativeLayout
-                android:id="@+id/topRlReferralMoney"
+                android:id="@+id/relativeLayoutReferralMoney"
                 android:layout_width="250px"
                 android:layout_height="match_parent"
-                android:layout_toRightOf="@+id/imgView2"
-                android:splitMotionEvents="false">
+                android:splitMotionEvents="false"
+                android:visibility="gone"
+                android:layout_weight="1"
 
+                >
+
+                <ImageView
+                    android:id="@+id/imgView2"
+                    android:layout_width="2px"
+                    android:layout_height="match_parent"
+                    android:background="@color/white" />
 
                 <TextView
                     android:id="@+id/textViewReferralMoneyText"
@@ -135,7 +140,7 @@
 
             </RelativeLayout>
 
-        </RelativeLayout>
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/linearLayoutHistoryTabs"
