--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_history.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_history.xml
@@ -126,7 +126,7 @@
 
         <LinearLayout
             android:layout_width="300px"
-            android:layout_height="170px"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginLeft="30px"
             android:layout_gravity="center_vertical"
@@ -148,10 +148,16 @@
                 android:layout_height="2px"
                 android:background="@color/black"/>
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center">
 
                 <TextView
                     android:id="@+id/textViewCustomerPaid"
@@ -168,18 +174,27 @@
                     android:layout_width="150px"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:layout_marginTop="5px"
+                    android:layout_marginBottom="10px"
                     android:singleLine="true"
                     android:layout_below="@+id/textViewCustomerPaid"
                     android:text="Paid in Cash"
                     android:textColor="@color/bg_grey_opaque"
                     android:textSize="20px"/>
+            </LinearLayout>
 
                 <ImageView
                     android:layout_width="2px"
-                    android:layout_height="85px"
+                    android:layout_height="match_parent"
                     android:layout_centerHorizontal="true"
                     android:id="@+id/imageViewVertical"
                     android:background="@color/black"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center">
 
                 <TextView
                     android:id="@+id/textViewAccountBalance"
@@ -188,7 +203,6 @@
                     android:gravity="center"
                     android:singleLine="true"
                     android:layout_marginTop="10px"
-                    android:layout_toRightOf="@+id/imageViewVertical"
                     android:text="@string/rupee_zero_zero"
                     android:textColor="@color/bg_grey_opaque"
                     android:textSize="30px"/>
@@ -198,14 +212,15 @@
                     android:layout_width="150px"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/textViewAccountBalance"
-                    android:layout_toRightOf="@+id/imageViewVertical"
                     android:gravity="center"
-                    android:singleLine="true"
+                    android:layout_marginTop="5px"
+                    android:layout_marginBottom="10px"
                     android:text="Account"
                     android:textColor="@color/bg_grey_opaque"
                     android:textSize="20px"/>
+            </LinearLayout>
 
-            </RelativeLayout>
+            </LinearLayout>
 
         </LinearLayout>
 
