feature_forgot_password_phone_number: replace email with phone no. in forgot password

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_forgot_password.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_forgot_password.xml
@@ -65,7 +65,7 @@
                 android:id="@+id/forgotPasswordHelpText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Please provide your email address to get instructions for reseting your password."
+            android:text="Enter your registered phone number for reseting your password."
             android:textColor="@color/white"
             android:textSize="36px" 
             android:layout_margin="35px"
@@ -92,12 +92,13 @@
                 android:layout_width="620px"
                 android:layout_height="98px"
                 android:background="#0000"
-                android:hint="@string/enter_email"
+                android:hint="@string/enter_phone_number"
                 android:singleLine="true"
+                android:inputType="number"
+                android:maxLength="10"
                 android:textSize="34px"
                 android:textColor="@color/black"
                 android:capitalize="words"
-                android:inputType="textEmailAddress"
                  />
 
             
@@ -109,7 +110,7 @@
             android:layout_height="99px"
             android:layout_marginTop="45px"
             android:background="@drawable/blue_btn_selector"
-            android:text="@string/send_email"
+            android:text="Send"
             android:textColor="@drawable/white_color_selector"
                         android:textSize="@dimen/button_text_size"  />
         
