--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -76,6 +76,7 @@
                         android:divider="@color/transparent"
                         android:visibility="visible"
                         android:layout_alignParentTop="true"
+                        android:splitMotionEvents="false"
                         >
                     </ListView>
 
