--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -1723,7 +1723,7 @@
                         android:layout_width="82px"
                         android:layout_height="82px"
                         android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
+                        android:layout_centerInParent="true"
                         android:background="@drawable/transparent"
                         android:longClickable="true" />
 
@@ -1732,7 +1732,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
-                        android:layout_centerInParent="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_marginLeft="100px"
+                        android:layout_marginTop="19px"
                         android:orientation="horizontal"
                         >
 
@@ -1755,6 +1757,51 @@
                             android:textSize="38px"/>
 
                     </LinearLayout>
+
+
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginTop="15px"
+                        >
+
+                        <TextView
+                            android:id="@+id/textViewTitleBarOnlineHours"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:layout_marginTop="5px"
+                            android:text="Duty Hours"
+                            android:textColor="@color/white"
+                            android:textSize="42px"/>
+
+                        <ImageView
+                            android:id="@+id/imageViewTitleBarOval"
+                            android:layout_toRightOf="@+id/textViewTitleBarOnlineHours"
+                            android:layout_width="60px"
+                            android:layout_height="60px"
+                            android:layout_marginLeft="25px"
+                            android:layout_marginRight="15px"
+                            android:src="@drawable/oval"
+                            android:tag="mwar"
+                            />
+
+                        <TextView
+                            android:id="@+id/imageViewTitleBarOvalText"
+                            android:layout_toRightOf="@+id/textViewTitleBarOnlineHours"
+                            android:layout_width="40px"
+                            android:layout_height="35px"
+                            android:layout_marginLeft="37px"
+                            android:layout_marginTop="10px"
+                            android:text="24"
+                            android:textSize="32px"
+                            android:textColor="@color/white"
+                            />
+
+
+                    </RelativeLayout>
                 </RelativeLayout>
             </RelativeLayout>
         </RelativeLayout>
